# proj-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.txt
.cursor/commands/: cursor-rules.md  decision.md  fix-implement.md  fix-plan.md  fix-review.md  int-opp.md  post-pr.md  post-release.md  pr-validation.md  pr.md  pre-phase-review.md  reflect.md  reflection-artifacts.md  research.md  status.md  task-phase.md  task-release.md  transition-plan.md
.cursor/rules/: main.mdc
.github/ISSUE_TEMPLATE/: experimental-feedback.yml
docs/: EXPERIMENTAL.md  GRADUATION-CHECKLIST.md  README.md  STABILITY-LEVELS.md
docs/configuration/: README.md
docs/development/: README.md
docs/maintainers/: README.md  WORKFLOW-CICD-IMPROVEMENT.md  WORKFLOW-EXPLORATION-RESEARCH-DECISION.md  WORKFLOW-FEATURE-DEVELOPMENT.md  WORKFLOW-OVERVIEW.md
docs/maintainers/decisions/: README.md
docs/maintainers/examples/: example-adr.md  example-exploration.md  example-feature-plan.md  example-research.md
docs/maintainers/feedback/sourcery/: pr1.md  pr2.md  pr3.md  pr4.md  pr5.md  (+1 more)
docs/maintainers/research/: README.md  requirements-template.md
docs/usage/: README.md
src/proj/: __init__.py  __main__.py  api_client.py  cli.py  config.py  error_handler.py
src/proj/commands/: __init__.py  init.py  inventory.py  projects.py
tests/: conftest.py  test_api_client.py  test_api_client_integration.py  test_cli.py  test_cli_integration.py  test_commands_init.py  test_commands_inventory.py  test_commands_projects.py  test_config.py  test_config_integration.py  test_error_handler.py  test_package.py
(+55 files in other folders)
